@@ -59,9 +59,11 @@ use warnings;
 # this test was generated with {{ ref($plugin) . ' ' . ($plugin->VERSION || '<self>') }}
 
 use Test::More;
-eval 'use Test::PAUSE::Permissions';
-plan skip_all => 'Test::PAUSE::Permissions required for testing pause permissions'
-  if $@;
+BEGIN {
+    plan skip_all => 'Test::PAUSE::Permissions required for testing pause permissions'
+        if $] < 5.010;
+}
+use Test::PAUSE::Permissions;
 
 all_permissions_ok({{ $username ? qq{'$username'} : '' }});
 TEST
